Try some spacing fixes

--- a/src/stylesheets/elements/_typography.scss
+++ b/src/stylesheets/elements/_typography.scss
@@ -9,7 +9,7 @@ body {
 
 p {
   line-height: $base-line-height;
-  margin-bottom: 0;
+  margin-bottom: 1em;
   margin-top: 1em;
 }
 
@@ -211,21 +211,89 @@ dfn {
   margin-top: 0;
 }
 
-.usa-grid,
+// Removes top margin from first child and bottom margin from last child on
+// elements when they are within those layout elements.
 .usa-section {
+  > :first-child {
+    margin-top: 0;
+  }
+
+  > :last-child {
+    margin-bottom: 0;
+  }
+
+  .usa-grid,
+  .usa-grid-full {
+    > :first-child {
+      margin-top: 0;
+    }
+
+    > :last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.usa-width-one-whole,
+.usa-width-one-half,
+.usa-width-one-third,
+.usa-width-two-thirds,
+.usa-width-one-fourth,
+.usa-width-three-fourths,
+.usa-width-one-sixth,
+.usa-width-five-sixths,
+.usa-width-one-twelfth {
   &:first-child {
     > :first-child {
       margin-top: 0;
+    }
+  }
 
-      > *:first-child {
-        margin-top: 0;
+  > :first-child {
+    @include media($medium-screen) {
+      margin-top: 0;
+    }
+  }
+
+  &:last-child {
+    > :last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  > :last-child {
+    @include media($medium-screen) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.usa-grid ~ .usa-grid,
+.usa-grid-full ~ .usa-grid-full {
+  .usa-width-one-whole,
+  .usa-width-one-half,
+  .usa-width-one-third,
+  .usa-width-two-thirds,
+  .usa-width-one-fourth,
+  .usa-width-three-fourths,
+  .usa-width-one-sixth,
+  .usa-width-five-sixths,
+  .usa-width-one-twelfth {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      &:first-child {
+        margin-top: 1.5em;
       }
     }
+  }
 
-    * > :first-child {
-      @include media($medium-screen) {
-        margin-top: 0;
-      }
+  p, ul, ol {
+    &:first-child {
+      margin-top: 1em;
     }
   }
 }
